linting: to `toList()` instead of `.collect(Collectors.toList())`
refs: OJ-3085